move margin to avoid margin collapsing

--- a/resources/assets/less/bem/ranking-page-header.less
+++ b/resources/assets/less/bem/ranking-page-header.less
@@ -28,7 +28,6 @@
   padding: 10px @ranking-page-header-inset 0;
 
   &__title {
-    margin-bottom: 30px;
     font-size: 35px;
     font-weight: 100;
     text-align: center;
