--- a/resources/assets/less/bem/spotlight-select-options.less
+++ b/resources/assets/less/bem/spotlight-select-options.less
@@ -22,6 +22,8 @@
     @background-color: fade(#333, 50%);
   );
 
+  margin-top: 30px;
+
   &__selector {
     max-height: 400px; // arbritary.
     overflow-y: scroll;
